array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var min:Int = num(0);
  var max:Int = num(0);
  
  for (i <- 1 to num.length-1) {
    if (num(i) < min) {
      min = num(i);
    }
    
    if (num(i) > max) {
      max = num(i);
    }
  }
  
  var levels = Array[Boolean](max-min+1);
  
  for (i <- 0 to num.length-1) {
    levels(mun(i)-min) = true;
  }
  
  var count = 0
  for (i <- 0 to (max-min+1)) {
    if (levels(i) == true) count += 1;
  }
  
  return count;
}